# wilayah

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  RELEASE.md  TODO.md  build.rs
.github/workflows/: ci.yml  deploy-worker.yml  release.yml
examples/: build_db.rs  serve.rs  verify_legacy.rs
examples/cloudflare-worker/: Cargo.toml  README.md  import_db.sh  schema.sql
examples/cloudflare-worker/.github/workflows/: deploy.yml
examples/cloudflare-worker/src/: lib.rs
src/: builder.rs  db.rs  geometry.rs  lib.rs  pipeline.rs  types.rs
src/builder/: big_api.rs  db_create.rs  geometry.rs  mod.rs  parse.rs  pdf.rs  spatial.rs  util.rs
src/db/: meta.rs  mod.rs  polygon.rs  query.rs
tests/: builder.rs  db_integrity.rs  db_types.rs  geometry.rs  locate.rs  polygon_locate.rs  query.rs  types.rs
tests/common/: mod.rs
