[package]
name = "wilayah"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Location lookup for Indonesian villages by GPS coordinates or name"
repository = "https://github.com/rafiyq/wilayah"
documentation = "https://docs.rs/wilayah"
keywords = ["indonesia", "geolocation", "administrative", "bmkg", "village"]
categories = ["science::geo", "database"]
readme = "README.md"

[dependencies]
rusqlite = { version = "0.39", features = ["functions", "serialize", "bundled"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
rusqlite = { version = "0.39", features = ["serialize", "bundled"] }
ureq = "2"
regex = "1"
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
axum = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
