[package]
name = "wilayah"
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "Location lookup for Indonesian villages by GPS coordinates or name"
repository = "https://github.com/rafiyq/wilayah"
documentation = "https://docs.rs/wilayah"
keywords = ["indonesia", "geolocation", "administrative", "bmkg", "village"]
categories = ["science::geo", "database"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }

rusqlite = { version = "0.39", features = ["functions", "serialize", "bundled"], optional = true }

# Optional dependencies for the build-db feature (pipeline)
ureq = { version = "2", optional = true }
regex = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }

[build-dependencies]
ureq = "2"

[dev-dependencies]
axum = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
regex = "1"

[features]
default = ["db"]
db = ["dep:rusqlite"]
build-db = ["db", "ureq", "regex", "serde_json", "sha2"]
raw-sqlite = ["db"]

# Examples are automatically included; no need to explicitly list unless you want custom names or settings
[[example]]
name = "build_db"
path = "examples/build_db.rs"
required-features = ["build-db"]

[[example]]
name = "verify_legacy"
path = "examples/verify_legacy.rs"
required-features = ["raw-sqlite"]

[[test]]
name = "db_integrity"
required-features = ["raw-sqlite"]

[[test]]
name = "polygon_locate"
required-features = ["raw-sqlite"]

[[test]]
name = "query"

[[test]]
name = "locate"

[[test]]
name = "geometry"

[[test]]
name = "types"
