[package]
name = "wilayah-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
wilayah = { path = "../..", default-features = false, features = ["types"] }
worker = { version = "0.8", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
